<resources>
    <string name="app_name">Band up!</string>
    <string name="facebook_app_id">393281867925321</string>
    <string name="fb_login_protocol_scheme">fb393281867925321</string>
    <string name="login_with_google">Continue with Google</string>
    <string name="register_here">Regístrate aquí</string>
    <string name="not_account">¿No tienes una cuenta?</string>
    <string name="login">Ingresar</string>
    <string name="password">Contraseña</string>
    <string name="email">Email</string>
    <string name="band_up">Band Up!</string>
    <string name="microphone">microphone</string>
    <string name="user_name">Identificador</string>
    <string name="first_name">Nombre</string>
    <string name="surname">Apellido</string>
    <string name="age">Edad</string>
    <string name="save">Guardar</string>
    <string name="select_your_musical_genres">Selecciona tus géneros musicales</string>
    <string name="select_your_musical_instruments">Selecciona tus instrumentos</string>
    <string name="next">Siguiente</string>
    <string name="fill_personal_data">Llena tus datos personales</string>
    <string name="repeat_password">Repetir contraseña</string>
    <string name="sign_up">Registrate</string>
    <string name="birthdate">Fecha de nacimiento</string>
    <string name="forgot_password">¿Olvidaste la contraseña?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pub">PUBLICAR</string>
    <string name="title">Titulo de canción</string>
    <string name="description">Descripción</string>
</resources>
